fixed align text section third

--- a/css/style-media.css
+++ b/css/style-media.css
@@ -14,6 +14,10 @@
     .col-md-4_4 {
         flex-basis: 25%;
     }
+
+    .text-left{
+        text-align: left;
+    }
 }
 
 @media screen and (min-width: 992px) {
