--- a/css/style.css
+++ b/css/style.css
@@ -93,12 +93,12 @@ footer {
 }
 
 .img-planning{
-    width: 90%;
+    width: 70%;
     margin: 0 auto;
 }
 
 .img-development{
-    width: 80%;
+    width: 50%;
     margin: 0 auto;
 }
 
